--- a/css/style.css
+++ b/css/style.css
@@ -124,11 +124,17 @@ li {list-style-type: none}
 }
 
 .person {
+	position: relative;
+	width: auto;
+	height: auto;
+}
+
+.person__info {
 	width: 100%;
 	height: 150px;
 }
 
-.person img {
+.person__info img {
 	width: 80px;
 	height: 80px;
 	border-radius: 80px;
@@ -136,7 +142,7 @@ li {list-style-type: none}
 	display: block;
 }
 
-.person p {
+.person__info p {
 	width: 100%;
 	text-align: center;
 	font-size: 20px;
@@ -160,20 +166,32 @@ li {list-style-type: none}
 	margin-bottom: 5px;
 	background: rgba(0,44,88,0.2);
 }
+
+.icon-star {
+	color: gold;
+	position: absolute;
+	top: 30px;
+	right: 20px;
+	position: absolute;
+	width: 24px;
+	height: 24px;
+	font-size: 24px;
+	cursor: pointer;
+}
+
+.icon-star:before,
+.icon-star.active:hover:before{
+	content: "\e600";
+}
+.icon-star.active:before,
+.icon-star:not(.active):hover:before {
+	content: "\e601";
+}
+
 /* стили блока block_content - конец */
 
 /* стили блока footer - начало */
-#footer {
-    width: 1024px;
-    height: 100px;
-    background-color: #7D7D7D;
-}
 
-    .copyright {
-        width: 100px;
-        margin: 0 auto;
-        padding: 22px 0;
-    }
 /* стили блока footer - конец */
 
 .post {
@@ -217,7 +235,7 @@ li {list-style-type: none}
 .post .destroy:hover {
   opacity: 1;
 }
-.post .destroy:before, .post .destroy:after {
+/*.post .destroy:before, .post .destroy:after {
 	position: absolute;
 	left: 15px;
 	content: ' ';
@@ -230,7 +248,7 @@ li {list-style-type: none}
 }
 .post .destroy:after {
 	transform: rotate(-45deg);
-}
+}*/
 
 #new_post {
 	display: block;
